# ExploringBeaglebone

./: .gitignore  BB_Cross_Toolchain.cmake  CMakeLists.txt  exploringbeaglebone_git.txt  show-pins
AS5600_Testing/: CMakeLists.txt  main.cpp
BitPrinting/: CMakeLists.txt  main.cpp
ExampleCrossCompile/: CMakeLists.txt  ExampleCrossCompile.kdev4  beaglebone-toolchain.cmake  main.cpp
GpioButtonEvent/: CMakeLists.txt  main.cpp
LedBlink/: CMakeLists.txt  main.cpp
LibGpiodChipPrint/: CMakeLists.txt  main.cpp
Working_dts_linux5.10.38/: .am335x-boneblack-roboticscape.dtb.cmd  .am335x-boneblack-roboticscape.dtb.d.dtc.tmp  .am335x-boneblack-roboticscape.dtb.d.pre.tmp  .am335x-boneblack-roboticscape.dtb.dts.tmp  Makefile  am335x-bone-common-no-capemgr.dtsi  am335x-boneblack-roboticscape.dtb  am33xx-l4.dtsi  am33xx.dtsi
rotation_pub_cpp/: CMakeLists.txt  main.cpp  rotation_t.hpp  rotation_t.zcm
u-boot_Changes/: uEnv.txt
