cmake_minimum_required(VERSION 3.5)

project(ExampleCrossCompile LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/beaglebone-toolchain.cmake)
set(CMAKE_LIBRARY_PATH ${CMAKE_SYSROOT}/usr/local/lib)
message(STATUS "CMAKE_SYSROOT Path : " ${CMAKE_SYSROOT})
message(STATUS "CXX Compiler : " ${CMAKE_CXX_COMPILER})
link_directories(${CMAKE_SYSROOT}/usr/local/lib)
add_executable(ExampleCrossCompile main.cpp)
target_include_directories(ExampleCrossCompile PRIVATE ${CMAKE_SYSROOT}/usr/local/include)
target_link_libraries(ExampleCrossCompile gpiodcxx gpiod)
set(CMAKE_INSTALL_PREFIX "/home/debian")
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/ExampleCrossCompile)
